api/swim_schema/src/schema/tests/derive/validated_form/generic_no_default.stderr
error[E0277]: the trait bound `S<Invalid>: StructuralWritable` is not satisfied
   --> src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |              -------------- ^^^^^^^^^^^^^^^^^^^^^^^ the trait `StructuralWritable` is not implemented for `S<Invalid>`
    |              |
    |              required by a bound introduced by this call
    |
    = help: the following other types implement trait `StructuralWritable`:
              &'a str
              &T
              &[u8]
              &mut T
              ()
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
            and 40 others
note: required by a bound in `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    | pub trait Form: StructuralReadable + StructuralWritable {
    |                                      ^^^^^^^^^^^^^^^^^^ required by this bound in `as_value`

error[E0277]: the trait bound `S<Invalid>: RecognizerReadable` is not satisfied
   --> src/schema/tests/derive/validated_form/generic_no_default.rs:30:29
    |
30  |     let _s = Form::as_value(&S { a: 1, f: Invalid });
    |              -------------- ^^^^^^^^^^^^^^^^^^^^^^^ the trait `RecognizerReadable` is not implemented for `S<Invalid>`
    |              |
    |              required by a bound introduced by this call
    |
    = help: the following other types implement trait `RecognizerReadable`:
              ()
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
              (T0, T1, T2, T3, T4, T5)
              (T0, T1, T2, T3, T4, T5, T6)
              (T0, T1, T2, T3, T4, T5, T6, T7)
            and 32 others
    = note: required because of the requirements on the impl of `StructuralReadable` for `S<Invalid>`
note: required by a bound in `as_value`
   --> $WORKSPACE/api/swim_form/src/lib.rs
    |
    | pub trait Form: StructuralReadable + StructuralWritable {
    |                 ^^^^^^^^^^^^^^^^^^ required by this bound in `as_value`
